# nidar-2-main

./: README.md  pyproject.toml
frontend/: index.html  package-lock.json  package.json  tailwind.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: KmlRosbridgeUploader.tsx
frontend/src/components/dashboard/: AlertsPanel.tsx  DashboardFooter.tsx  DroneMap.tsx  DroneStatusCards.tsx  FileUpload.tsx  GPSHandlers.tsx  ManualControls.tsx  MissionControl.tsx  MissionStats.tsx  PX4GPSReceiver.tsx  ROS2Settings.tsx  SystemLog.tsx  VideoFeedTabs.tsx
frontend/src/context/: DroneGPSContext.tsx
frontend/src/hooks/: useDroneGPS.ts
frontend/src/pages/: Index.tsx
frontend/src/types/: third-party.d.ts
nidar_ws/: config.json
nidar_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
nidar_ws/install/custom_msgs/share/custom_msgs/: local_setup.bash  local_setup.dsv  (+4 more)
nidar_ws/log/: latest_build
nidar_ws/src/custom_msgs/: CMakeLists.txt
nidar_ws/src/custom_msgs/msg/: CropStressDetection.msg
nidar_ws/src/mission_interfaces/: CMakeLists.txt
nidar_ws/src/mission_interfaces/action/: SprayActionTrigger.action
nidar_ws/src/mission_interfaces/srv/: GetComConfig.srv  GetDroneConfig.srv  SetDroneConfig.srv
nidar_ws/src/mission_manager/: package.xml  setup.py
nidar_ws/src/mission_manager/mission_manager/: DataConfigServices.py  ScoutMissionManager.py  scout_path_generator.py
nidar_ws/src/model_inference/: package.xml  setup.cfg  setup.py
nidar_ws/src/model_inference/model_inference/: img2gps_node.py  model_inference_node.py
(+272 files in other folders)
